# makebootfat

./: .gitignore  AUTHORS  HISTORY  INSTALL  Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac  configure.windows-x86  disk.c  disk.h  fat.c  fat.h  makebootfat.c  makedist.sh  mbrfat.asm  part.c  part.h  portable.h
doc/: authors.d  history.d  history.html  history.txt  install.d  makebootfat.1  makebootfat.d  makebootfat.html  makebootfat.txt  readme.d
test/: test.raw
